2007-05-25  Behdad Esfahbod  <behdad@gnome.org>

	* glib/guniprop.c (g_unichar_iswide), (g_unichar_iswide_cjk):
	Update to Markus Kuhn's updated wcwidth for Unicode 5.0.

2007-05-01  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.12.12 ===

	* configure.in: Bump version

	* NEWS: Updates

2007-04-27  Tor Lillqvist  <tml@novell.com>

	* glib/gstdio.c (g_mkdir): Document that the mode argument is
	ignored on Windows
	(g_stat): Document that st_mode is mostly useless on Windows.

2007-04-24  Michael Natterer  <mitch@imendio.com>

	Merge from trunk:

	* tests/gobject/paramspec-test.c: test all GParamSpecString
	validations with static and allocated strings.

2007-04-15  Tor Lillqvist  <tml@novell.com>

	* build: Include the build module using the svn:externals
	mechanism.

	* Makefile.am
	* configure: Add the references to build back.

2007-03-23  Matthias Clasen  <mclasen@redhat.com> 

	Merge from trunk:

	* tests/gobject/Makefile.am: Handle $RANDOM missing.  (#356843,
	Paul Jarc)

2007-03-22  Matthias Clasen  <mclasen@redhat.com> 

	Merge from trunk:

	* glib/guniprop.c: Fix corner-cases of upper/lowercase conversion.
	(#418217, Denis Jacquerye)

2007-03-22  Chris Wilson  <chris@chris-wilson.co.uk>

	Merge from trunk:

	* glib/gkeyfile.c: Track whether the last key=value pair in a group
	is a blank line and during to_data() only insert a new blank line
	betweens group in its absence. This allows the beautification of the
	GKeyFile and prevents newlines being inserted indefinitely. (#420686)

	* tests/keyfile-test.c (test_reload_idempotency): Test that after a 
	single beautification pass, g_key_file_to_data() does not alter its
	input data.

2007-03-16  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* glib/gbase64.c (g_base64_decode): Warn if the input
	is too short.  (#418862, Halton Huo)

2007-03-08  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.11 ===

	* NEWS: Updates
